# splunk-dns-answer-parser

./: README.md  SECURITY.md  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: package.yml
dns_answer_parser/: __init__.py
dns_answer_parser/default/: app.conf  commands.conf  searchbnf.conf
tests/: conftest.py  test_command_integration.py  test_parser.py
